<resources>
    <string name="app_name">PM-L7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="n_lab">Laboratorio 7</string>
    <string name="ingreso_correo">Ingresa tu correo</string>
    <string name="newuser">¿Nuevo usuario? ¡Crea tu cuenta aquí!</string>
    <string name="inicio_sesion">Iniciar sesión</string>
    <string name="newaccount">Nueva Cuenta</string>
    <string name="createacc">Crear cuenta</string>
    <string name="profile">Mi Perfil</string>
    <string name="imagendeperfil">imagendeperfil</string>
    <string name="correo_ingreso">Correo electrónico</string>
    <string name="actualizarcorreo">Actualizar</string>
    <string name="mensaje_bienvenida">¡Buenos días!</string>
    <string name="actualizar_peticion">Hola correo, necesitamos que actualices tu perfil!</string>
    <string name="profilactualization">Actualizar perfil</string>
    <string name="home">fragment_home</string>
    <string name="login">fragment_login</string>
    <string name="newacc">fragment_new_account</string>
    <string name="profileacc">fragment_profile</string>

</resources>