<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.jimena.pm_l7.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
        <argument
            android:name="email"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.jimena.pm_l7.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_newAccountFragment2"
            app:destination="@id/newAccountFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment2"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/newAccountFragment"
        android:name="com.jimena.pm_l7.NewAccountFragment"
        android:label="@string/newacc"
        tools:layout="@layout/fragment_new_account" >
        <action
            android:id="@+id/action_newAccountFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.jimena.pm_l7.ProfileFragment"
        android:label="@string/profileacc"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_loginFragment2"
            app:destination="@id/loginFragment" />
        <argument
            android:name="finalEmail"
            app:argType="string" />
    </fragment>
</navigation>