<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/miperfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopmid"
        android:fontFamily="@font/cicular"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="@dimen/titlemax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddingsizemid"
        android:layout_marginTop="@dimen/marginTopmid"
        android:src="@drawable/ic_baseline_camera_alt_24"
        android:background="@drawable/background_round"
        app:layout_constraintStart_toStartOf="@id/miperfil"
        app:layout_constraintEnd_toEndOf="@id/miperfil"
        app:layout_constraintTop_toBottomOf="@id/miperfil"
        android:contentDescription="@string/imagendeperfil"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/correofinal"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopmin"
        android:layout_marginStart="@dimen/marginStartEnd"
        android:layout_marginEnd="@dimen/marginStartEnd"
        android:hint="@string/correo_ingreso"
        app:boxStrokeColor="@color/gris"
        android:textColorHint="@color/gris"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/camera"
        app:startIconTint="@color/gris"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/actualization"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopmid"
        android:backgroundTint="@color/naranja"
        android:text="@string/actualizarcorreo"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/marginTopmid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/correofinal"
        app:layout_constraintStart_toStartOf="@id/correofinal" />


</androidx.constraintlayout.widget.ConstraintLayout>