<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".NewAccountFragment">

    <TextView
        android:id="@+id/titlenuevacuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopmid"
        android:fontFamily="@font/cicular"
        android:text="@string/newaccount"
        android:textColor="@color/black"
        android:textSize="@dimen/titlemax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/correosignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/ingreso_correo"
        android:textColorHint="@color/gris"
        app:boxStrokeColor="@color/gris"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/marginStartEnd"
        android:layout_marginEnd="@dimen/marginStartEnd"
        app:layout_constraintBottom_toTopOf="@id/buttonhome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlenuevacuenta"
        app:layout_constraintVertical_chainStyle="packed"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonhome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/createacc"
        android:layout_marginTop="@dimen/marginTopmid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/correosignup"
        app:layout_constraintStart_toStartOf="@id/correosignup"
        android:backgroundTint="@color/naranja"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/correosignup" />



</androidx.constraintlayout.widget.ConstraintLayout>





